force-app/main/default/objects/sfmc_email_engagement_click_534007695__dll/fields/JobURLID__c.field-meta.xml
<CustomField>
    <fullName>JobURLID__c</fullName>
    <label>Job URL ID</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>JobURLID</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>