force-app/main/default/objects/sfmc_email_engagement_click_534007695__dll/fields/StateProvinceCode__c.field-meta.xml
<CustomField>
    <fullName>StateProvinceCode__c</fullName>
    <label>State Province Code</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>StateProvinceCode</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>