force-app/main/default/objects/sfmc_email_engagement_click_534007695__dll/fields/UserAgentDeviceId__c.field-meta.xml
<CustomField>
    <fullName>UserAgentDeviceId__c</fullName>
    <label>User Agent Device ID</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>UserAgentDeviceId</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>